[gd_scene load_steps=2 format=2]

[ext_resource path="res://Addons/SimpleNodes/MusicManager.gd" type="Script" id=1]

[node name="MusicManager" type="Node"]
script = ExtResource( 1 )

[node name="Track1" type="AudioStreamPlayer" parent="."]
bus = "Music"

[node name="Track2" type="AudioStreamPlayer" parent="."]
bus = "Music"
